[package]
name = "adventofcode-2022"
version = "0.1.0"
description = "Advent of Code puzzles, 2022 edition."
authors = ["fischl", "lotus", "morgan", "raquel", "venustas"]
edition = "2021"

[dependencies]

[profile.release]
opt-level = 3

[[bin]] # venustas, raquel
name = "day01"
path = "src/day01.rs"

[[bin]] # venustas
name = "day02"
path = "src/day02.rs"

[[bin]] # raquel
name = "day03"
path = "src/day03.rs"

[[bin]] # raquel
name = "day04"
path = "src/day04.rs"

[[bin]] # lotus
name = "day05"
path = "src/day05.rs"

[[bin]] # fischl
name = "day06"
path = "src/day06.rs"

[[bin]] # raquel
name = "day07"
path = "src/day07.rs"

[[bin]] # raquel
name = "day08"
path = "src/day08.rs"

[[bin]] # morgan
name = "day09"
path = "src/day09.rs"

[[bin]] # morgan
name = "day10"
path = "src/day10.rs"

[[bin]] # raquel
name = "day11"
path = "src/day11.rs"

[[bin]] # raquel
name = "day12"
path = "src/day12.rs"

[[bin]] # raquel
name = "day13"
path = "src/day13.rs"

[[bin]] # raquel
name = "day14"
path = "src/day14.rs"

[[bin]] # morgan
name = "day15"
path = "src/day15.rs"

[[bin]] # raquel, morgan
name = "day16"
path = "src/day16.rs"

[[bin]] # raquel
name = "day17"
path = "src/day17.rs"

[[bin]] # raquel
name = "day18"
path = "src/day18.rs"

[[bin]] # lotus
name = "day19"
path = "src/day19.rs"

[[bin]] # raquel
name = "day20"
path = "src/day20.rs"

[[bin]] # raquel
name = "day21"
path = "src/day21.rs"

[[bin]] # venustas
name = "day22"
path = "src/day22.rs"

[[bin]] # morgan
name = "day23"
path = "src/day23.rs"